--- a/static/index.html
+++ b/static/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Face Authentication Attendance System</title>
-    <meta name="description" content="Real-time face recognition attendance tracking system with spoof detection">
+    <title>FacePass - Smart Face Authentication Attendance</title>
+    <meta name="description" content="FacePass - Your Face, Your Access. Real-time face recognition attendance tracking with anti-spoofing protection.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
                     <path d="M9 15s1.5 2 3 2 3-2 3-2"/>
                 </svg>
             </div>
-            <span class="brand-text">FaceAuth Pro</span>
+            <span class="brand-text">FacePass</span>
         </div>
         <div class="nav-tabs">
             <button class="nav-tab active" data-tab="attendance">
